[gd_scene load_steps=13 format=2]

[ext_resource path="res://menu/transition.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/final_level.gd" type="Script" id=2]
[ext_resource path="res://player/trigger_zone.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/light_effect.png" type="Texture" id=4]
[ext_resource path="res://player/player_future_shader.tres" type="Material" id=5]
[ext_resource path="res://levels/factory_tilemap.tres" type="TileSet" id=6]
[ext_resource path="res://assets/city_paralax-black.png" type="Texture" id=7]
[ext_resource path="res://assets/level1-background.png" type="Texture" id=8]
[ext_resource path="res://player/respawn_point.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/audio/future_final.mp3" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]
resource_name = "future"

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 77, 101 )

[node name="final_level" type="Node2D"]
material = ExtResource( 5 )
script = ExtResource( 2 )

[node name="animation_player" type="AnimationPlayer" parent="."]
anims/future = SubResource( 1 )

[node name="background" type="TextureRect" parent="."]
use_parent_material = true
margin_left = 1.0
margin_top = -1.0
margin_right = 401.0
margin_bottom = 199.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="skyline" type="TextureRect" parent="."]
use_parent_material = true
margin_left = 1.0
margin_top = -1.0
margin_right = 401.0
margin_bottom = 199.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="respawn_point" parent="." instance=ExtResource( 9 )]
use_parent_material = true
position = Vector2( 356, -30 )
is_active = true

[node name="tilemap" type="TileMap" parent="."]
use_parent_material = true
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65535, 0, 65538, 24, 0, 65536, 25, 0, 65538, 131071, 0, 65538, 65560, 0, 65536, 65561, 0, 65538, 196607, 0, 65538, 131096, 0, 65536, 131097, 0, 65538, 262143, 0, 65538, 196632, 0, 65536, 196633, 0, 65538, 327679, 0, 65538, 262168, 0, 65536, 262169, 0, 65538, 393215, 0, 65538, 327704, 0, 65536, 327705, 0, 65538, 458751, 0, 65538, 393240, 0, 65536, 393241, 0, 65538, 524287, 0, 65538, 458776, 0, 65536, 458777, 0, 65538, 589823, 0, 65538, 524312, 0, 65536, 524313, 0, 65538, 655359, 0, 65538, 589848, 0, 65536, 589849, 0, 65538, 720895, 0, 65538, 655384, 0, 65536, 655385, 0, 65538, 786431, 0, 65538, 720920, 0, 65536, 720921, 0, 65538, 851967, 0, 65537, 786432, 0, 65539, 786433, 0, 1, 786434, 0, 65539, 786435, 0, 1, 786436, 0, 65540, 786437, 0, 65540, 786438, 0, 1, 786439, 0, 65539, 786440, 0, 1, 786441, 0, 65540, 786442, 0, 65540, 786443, 0, 65540, 786444, 0, 65539, 786445, 0, 65540, 786446, 0, 65539, 786447, 0, 65539, 786448, 0, 65540, 786449, 0, 65539, 786450, 0, 65539, 786451, 0, 65540, 786452, 0, 1, 786453, 0, 1, 786454, 0, 65539, 786455, 0, 1, 786456, 0, 65537, 786457, 0, 65538 )
__meta__ = {
"_edit_lock_": true
}

[node name="trigger_zone" parent="." instance=ExtResource( 3 )]

[node name="shape" parent="trigger_zone" index="0"]
position = Vector2( 78.337, 100 )
shape = SubResource( 2 )

[node name="light_effect" type="TextureRect" parent="."]
margin_left = 1.0
margin_top = 5.0
margin_right = 401.0
margin_bottom = 205.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="transition" parent="." instance=ExtResource( 1 )]
margin_left = 8.0
margin_top = 6.0
margin_right = 408.0
margin_bottom = 206.0

[node name="future_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true

[node name="camera" type="Camera2D" parent="."]
position = Vector2( 210, 106 )
current = true
__meta__ = {
"_edit_lock_": true
}

[connection signal="area_entered" from="trigger_zone" to="." method="_on_trigger_zone_area_entered"]
[connection signal="transition_end" from="transition" to="." method="_on_transition_transition_end"]

[editable path="trigger_zone"]
